navbar and user profile section and authentication on completed

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    background-image: linear-gradient(#221546, #10002B);
+    background-image: linear-gradient(#291a53, #10002B);
 }
